--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <!-- Your image here -->
         <img src="static/images/framework.pdf" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          First image description.
+          系统整体框架示意图
         </h2>
       </div>
   </div>
