--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/framework.pdf" alt="MY ALT TEXT"/>
+        <img src="static/images/framework.png" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           系统整体框架示意图
         </h2>
