--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">可信多媒体推荐系统</h1>
+            <h1 class="title is-1 publication-title">可信多媒体推荐系统 (大数据实践赛参赛作品) </h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
