--- a/index.html
+++ b/index.html
@@ -123,23 +123,19 @@
 </section>
 
 
-<!-- Image carousel -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/framework.png" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          系统整体框架示意图
-        </h2>
-      </div>
-  </div>
-</div>
-</div>
-</section>
-<!-- End image carousel -->
+<div class="content has-text-justified">
+<img class="columns is-centered has-text-centered" src="./static/images/framework.png" alt="Teaser" width="95%" style="margin:0 auto">
+<br>
+<figcaption>
+    <p style="text-align: center;">
+        <font color="061E61">
+            <b>Figure 1:</b> The LLMRec framework: (1) Three types of data augmentation strategies: i) augmenting user-item interactions; ii) enhancing item attributes, and iii) user profiling. (2) Augmented training with and denoised data robustification mechanism.
+        </font>
+    </p>
+</figcaption>
+<br>
+<p>
+</p><ul>
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
