--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">河北工业大学<br>Conferance name and year</span>
+                    <span class="author-block">河北工业大学<br>
                   </div>
 
                   <div class="column has-text-centered">
