--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <figcaption>
     <p style="text-align: center;">
         <font color="061E61">
-            <b>Figure 1:</b> The LLMRec framework: (1) Three types of data augmentation strategies: i) augmenting user-item interactions; ii) enhancing item attributes, and iii) user profiling. (2) Augmented training with and denoised data robustification mechanism.
+            <b>系统框架示意图
         </font>
     </p>
 </figcaption>
