--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
         <div class="content has-text-justified">
           <p>
             &nbsp;&nbsp;在当下信息爆炸的时代，我们需要信息过滤技术来帮助用户找到符合需求的信息，推荐系统是其中的一项核心技术，它可以根据用户兴趣为用户提供个性化产品与服务，从而缓解信息过载问题。随着信息技术的发展，当下以电商和短视频平台为代表的在线服务平台得到广泛普及，用户在线交互的内容普遍以多媒体形式呈现，当前面向多媒体内容的推荐系统已成为重要的研究热点，然而在过去很长一段时间内整个推荐系统领域研究一直以准确性为导向，在推荐精度取得进步的同时却涌现出了一系列其他问题，如推荐结果难解释，网络环境中充斥着恶意攻击和虚假信息。这引发了对新的推荐系统范式的迫切需求，即负责任、可信赖的推荐系统，它要求推荐系统需具备鲁棒性、公平性、可解释性等性质。
-<br>  为解决这些现实挑战，本项目聚焦于构建多媒体场景下的可信推荐系统，我们从多媒体推荐算法的工作流程入手分析其可信性弱点：在数据准备阶段，多媒体数据的内容容易受对抗扰动影响，从而影响推荐模型的鲁棒性；在模型训练阶段，多媒体内容模态分布不均会导致模型训练有偏，带来推荐结果不公平问题；在推荐生成阶段，由于用户与多媒体内容之间具有复杂的交互模式，使得捕捉用户兴趣更为困难，同时也让推荐结果更难解释。
-<br>  本项目的研究内容即主要围绕着这三方面的问题与挑战展开。在鲁棒性方面，我们设计了基于自适应模态平衡的鲁棒多媒体推荐方法；在公平性方面，我们设计了基于因果模态纠偏的公平多媒体推荐方法；在可解释性方面，我们设计了基于大语言模型对齐的可解释多媒体推荐方法。通过将上述各部分算法集成开发了一个多维度综合性可信多媒体推荐系统。这一研究具有新场景、新导向的特点，我们在两个典型的电商场景推荐数据集上进行各部分算法效果验证，实验结果表明在各个可信维度上我们的算法相比于已有方法均取得了效果提升。我们希望以本项目为出发点，构建现实场景下的综合全面的可信多媒体推荐系统，让推荐系统更好地服务社会。
+<br>&nbsp;&nbsp;为解决这些现实挑战，本项目聚焦于构建多媒体场景下的可信推荐系统，我们从多媒体推荐算法的工作流程入手分析其可信性弱点：在数据准备阶段，多媒体数据的内容容易受对抗扰动影响，从而影响推荐模型的鲁棒性；在模型训练阶段，多媒体内容模态分布不均会导致模型训练有偏，带来推荐结果不公平问题；在推荐生成阶段，由于用户与多媒体内容之间具有复杂的交互模式，使得捕捉用户兴趣更为困难，同时也让推荐结果更难解释。
+<br>&nbsp;&nbsp;本项目的研究内容即主要围绕着这三方面的问题与挑战展开。在鲁棒性方面，我们设计了基于自适应模态平衡的鲁棒多媒体推荐方法；在公平性方面，我们设计了基于因果模态纠偏的公平多媒体推荐方法；在可解释性方面，我们设计了基于大语言模型对齐的可解释多媒体推荐方法。通过将上述各部分算法集成开发了一个多维度综合性可信多媒体推荐系统。这一研究具有新场景、新导向的特点，我们在两个典型的电商场景推荐数据集上进行各部分算法效果验证，实验结果表明在各个可信维度上我们的算法相比于已有方法均取得了效果提升。我们希望以本项目为出发点，构建现实场景下的综合全面的可信多媒体推荐系统，让推荐系统更好地服务社会。
           </p>
         </div>
       </div>
