--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           对抗攻击下五个主流多模态推荐模型性能变化示意图
-          <br>结论：当前主流的多模态推荐模型的平均性能普遍下降为原来的一半左右，表现出严重对抗脆弱性
+          结论：当前主流的多模态推荐模型的平均性能普遍下降为原来的一半左右，表现出严重对抗脆弱性
         </h2>
       </div>
       <div class="item">
