--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 <br>
 <h4 class="title is-4">基于自适应模态平衡的鲁棒多媒体推荐方法</h4>
 <p>多媒体推荐系统通常会引入物品的多模态信息作为模型输入的一部分，然而实际测试发现这些多模态特征上添加微小对抗扰动就会导致模型性能严重下降，在实际场景中对于推荐结果的可靠性和平台的安全性造成巨大威胁。我们的目标是设计有效的对抗防御方法以增强多媒体推荐模型的对抗鲁棒性。</p>
-<p>解决思路：</p><br>
+<p>解决思路：</p>
   <ul>
     <li>对主流多媒体推荐模型进行对抗攻击测试</li>
     <li>分析这些模型对抗脆弱性原因</li>
@@ -172,7 +172,14 @@
        <div class="item">
         <!-- Your image here -->
         <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
+        <figcaption>
+        <p style="text-align: center;">
+            <font color="061E61">
+               对抗攻击下五个主流多模态推荐模型性能变化示意图
+          <br>结论：当前主流的多模态推荐模型的平均性能普遍下降为原来的一半左右，表现出严重对抗脆弱性
+            </font>
+        </p>
+    </figcaption>
           对抗攻击下五个主流多模态推荐模型性能变化示意图
           结论：当前主流的多模态推荐模型的平均性能普遍下降为原来的一半左右，表现出严重对抗脆弱性
         </h2>
