--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT" width="50%">
         <figcaption>
         <p style="text-align: center;">
             <font color="061E61">
