--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
     </p>
 </figcaption>
 <br>
-<p>
-</p><ul>
+
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
@@ -164,6 +163,21 @@
     <li>分析这些模型对抗脆弱性原因</li>
     <li>设计通用的对抗鲁棒性增强方法</li>
 </ul>
+<br>
+
+<div class="content has-text-justified">
+<img class="columns is-centered has-text-centered" src="./static/images/framework.png" alt="Teaser" width="50%" style="margin:0 auto">
+<br>
+<figcaption>
+    <p style="text-align: center;">
+        <font color="061E61">
+            <b>对抗攻击下五个主流多模态推荐模型性能变化示意图
+          <br>结论：当前主流的多模态推荐模型的平均性能普遍下降为原来的一半左右，表现出严重对抗脆弱性
+        </font>
+    </p>
+</figcaption>
+<br>
+  
 <!-- Image carousel -->
 <section class="hero is-small">
   <div class="hero-body">
