--- a/index.html
+++ b/index.html
@@ -171,8 +171,9 @@
 <figcaption>
     <p style="text-align: center;">
         <font color="061E61">
-            <b>对抗攻击下五个主流多模态推荐模型性能变化示意图
-          <br>结论：当前主流的多模态推荐模型的平均性能普遍下降为原来的一半左右，表现出严重对抗脆弱性
+            <b>对抗攻击下五个主流多模态推荐模型性能变化示意图（左）及 对抗攻击下各模态用户--物品偏好分数变化示意图（右）
+          <br>结论1：当前主流的多模态推荐模型的平均性能普遍下降为原来的一半左右，表现出严重对抗脆弱性
+              <br>结论2：多媒体推荐模型对抗鲁棒性差的原因在于存在敏感模态（如视觉模态），其受到对抗攻击后使得用户偏好预测分数严重下降，导致推荐列表被打乱
         </font>
     </p>
 </figcaption>
