--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 <!-- End paper abstract -->
 
 <br>
+<div class="column is-four-fifths">
 <h4 class="title is-4">基于自适应模态平衡的鲁棒多媒体推荐方法</h4>
 <p>多媒体推荐系统通常会引入物品的多模态信息作为模型输入的一部分，然而实际测试发现这些多模态特征上添加微小对抗扰动就会导致模型性能严重下降，在实际场景中对于推荐结果的可靠性和平台的安全性造成巨大威胁。我们的目标是设计有效的对抗防御方法以增强多媒体推荐模型的对抗鲁棒性。</p>
 <p>解决思路：</p>
@@ -163,10 +164,11 @@
     <li>分析这些模型对抗脆弱性原因</li>
     <li>设计通用的对抗鲁棒性增强方法</li>
 </ul>
+</div>
 <br>
 
 <div class="content has-text-justified">
-<img class="columns is-centered has-text-centered" src="./static/images/framework.png" alt="Teaser" width="50%" style="margin:0 auto">
+<img class="columns is-centered has-text-centered" src="./static/images/attack.png" alt="Teaser" width="50%" style="margin:0 auto">
 <br>
 <figcaption>
     <p style="text-align: center;">
