--- a/index.html
+++ b/index.html
@@ -175,8 +175,9 @@
 </div>
 <br>
 
+<h5 class="title is-5">对抗攻击测试分析</h5>
 <div class="content has-text-justified">
-<img class="columns is-centered has-text-centered" src="./static/images/attack.png" alt="Teaser" width="60%" style="margin:0 auto">
+<img class="columns is-centered has-text-centered" src="./static/images/attack.png" alt="Teaser" width="50%" style="margin:0 auto">
 <br>
 <figcaption>
     <p style="text-align: center;">
@@ -190,7 +191,7 @@
 <br>
 
 <div class="content has-text-justified">
-<img class="columns is-centered has-text-centered" src="./static/images/robustness.png" alt="Teaser" width="60%" style="margin:0 auto">
+<img class="columns is-centered has-text-centered" src="./static/images/robustness.png" alt="Teaser" width="50%" style="margin:0 auto">
 <br>
 <figcaption>
     <p style="text-align: center;">
