--- a/index.html
+++ b/index.html
@@ -195,6 +195,12 @@
 </figcaption>
 <br>
 
+<div class="columns is-centered has-text-centered">
+<div class="column is-four-fifths">
+<h5 class="title is-5">鲁棒性增强方法设计</h5>
+</div>
+</div>
+  
 <div class="content has-text-justified">
 <img class="columns is-centered has-text-centered" src="./static/images/robustness.png" alt="Teaser" width="50%" style="margin:0 auto">
 <br>
