--- a/index.html
+++ b/index.html
@@ -157,6 +157,26 @@
 <!-- End paper abstract -->
 
 <br>
+
+<div class="container is-max-desktop">
+<div class="columns is-centered has-text-centered">
+<div class="column is-four-fifths">
+    <h4 class="title is-4">多媒体推荐系统可信性挑战</h4>
+    <div class="content has-text-justified">
+  <ul>
+    <li>鲁棒性：多媒体内容受对抗扰动影响威胁模型安全</li>
+    <li>公平性：多媒体内容模态分布不均导致模型训练有偏</li>
+    <li>可解释性：用户与多媒体内容之间的复杂交互模式难理解</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="content has-text-justified">
+<img class="columns is-centered has-text-centered" src="./static/images/challenge.png" alt="Teaser" width="50%" style="margin:0 auto">
+</div>
+<br>
+  
 <div class="container is-max-desktop">
 <div class="columns is-centered has-text-centered">
 <div class="column is-four-fifths">
