--- a/index.html
+++ b/index.html
@@ -178,6 +178,32 @@
 <img class="columns is-centered has-text-centered" src="./static/images/challenge.png" alt="Teaser" width="40%" style="margin:0 auto">
 </div>
 <br>
+
+<div class="columns is-centered has-text-centered">
+<div class="column is-four-fifths">
+<h5 class="title is-5">数据集介绍</h5>
+  <div class="content has-text-justified">
+      <p>
+本项目的算法开发与测试基于亚马逊电商平台的两个公开数据集Baby（婴幼儿商品）和Clothing（服饰商品）进行。
+<span class="link-block">
+          <a href="https://cseweb.ucsd.edu/~jmcauley/datasets/amazon/links.html" target="_blank"
+          class="external-link button is-normal is-rounded is-dark">
+</p>
+</div>
+</div>
+</div>
+  
+<div class="content has-text-justified">
+<img class="columns is-centered has-text-centered" src="./static/images/data.png" alt="Teaser" width="50%" style="margin:0 auto">
+<br>
+<figcaption>
+    <p style="text-align: center;">
+        <font color="061E61">
+          数据集统计信息详情
+        </font>
+    </p>
+</figcaption>
+<br>
   
 <div class="container is-max-desktop">
 <div class="columns is-centered has-text-centered">
@@ -246,7 +272,7 @@
 </div>
   
 <div class="content has-text-justified">
-<img class="columns is-centered has-text-centered" src="./static/images/robustness_exp1.png" alt="Teaser" width="50%" style="margin:0 auto">
+<img class="columns is-centered has-text-centered" src="./static/images/robustness_exp1.png" alt="Teaser" width="60%" style="margin:0 auto">
 <br>
 <figcaption>
     <p style="text-align: center;">
@@ -259,7 +285,7 @@
 <br>
 
 <div class="content has-text-justified">
-<img class="columns is-centered has-text-centered" src="./static/images/robustness_exp2.png" alt="Teaser" width="50%" style="margin:0 auto">
+<img class="columns is-centered has-text-centered" src="./static/images/robustness_exp2.png" alt="Teaser" width="60%" style="margin:0 auto">
 <br>
 <figcaption>
     <p style="text-align: center;">
