--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 <h5 class="title is-5">数据集介绍</h5>
   <div class="content has-text-justified">
       <p>
-本项目的算法开发与测试基于亚马逊电商平台的两个公开数据集Baby（婴幼儿商品）和Clothing（服饰商品）进行，数据集网址：<a href="https://cseweb.ucsd.edu/~jmcauley/datasets/amazon/links.html" target="_blank"></a>
+本项目的算法开发与测试基于<a href="https://cseweb.ucsd.edu/~jmcauley/datasets/amazon/links.html" target="_blank">亚马逊电商平台</a>的两个公开数据集Baby（婴幼儿商品）和Clothing（服饰商品）进行。
 </p>
 </div>
 </div>
