--- a/index.html
+++ b/index.html
@@ -178,14 +178,16 @@
 <img class="columns is-centered has-text-centered" src="./static/images/challenge.png" alt="Teaser" width="40%" style="margin:0 auto">
 </div>
 <br>
-
+  
+<div class="container is-max-desktop">
 <div class="columns is-centered has-text-centered">
 <div class="column is-four-fifths">
-<h5 class="title is-5">数据集介绍</h5>
+<h4 class="title is-4">数据集介绍</h4>
   <div class="content has-text-justified">
       <p>
 本项目的算法开发与测试基于<a href="https://cseweb.ucsd.edu/~jmcauley/datasets/amazon/links.html" target="_blank">亚马逊电商平台</a>的两个公开数据集Baby（婴幼儿商品）和Clothing（服饰商品）进行。
 </p>
+</div>
 </div>
 </div>
 </div>
