--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">77</a><sup></sup>,</span>
+                77,
+              </span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">77</a><sup></sup>,</span>
+                  77,
+                </span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">77</a>
+                   77
                   </span>
                   </div>
 
