--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <br><br>解决思路：
 </p>
   <ul>
-    <li>多媒体推荐场景不公平原因分析（模态偏差影响）</li>
+    <li>多媒体推荐场景不公平原因分析（模态偏差分析）</li>
     <li>多媒体推荐算法因果图构建</li>
     <li>利用反事实推断消除模态偏差，提升公平性</li>
 </ul>
@@ -268,7 +268,8 @@
 <figcaption>
     <p style="text-align: center;">
         <font color="061E61">
-        例如在视频推荐场景中，训练数据中音频内容可能呈现出长尾分布特点，某个背景音乐在用户交互记录中高频出现，训练得到的模型会倾向于认为包含此类音乐的视频都会被用户喜欢，导致此类视频被过度推荐，影响推荐公平性
+        例如在视频推荐场景中，训练数据中音频内容可能呈现出长尾分布特点，某个背景音乐在用户交互记录中高频出现，
+          <br>训练得到的模型会倾向于认为包含此类音乐的视频都会被用户喜欢，导致此类视频被过度推荐，影响推荐公平性
         </font>
     </p>
 </figcaption>
