--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 <figcaption>
     <p style="text-align: center;">
         <font color="061E61">
-          经过模态去偏，不同模态内容组别之间的推荐频率分布变得更加均匀，证明我们的方法可以有效消除模态偏差问题，提升最终推荐列表中的物品分布公平性。
+          经过模态去偏，不同模态内容组别之间的推荐频率分布变得更加均匀（黄→蓝），证明我们的方法可以有效消除模态偏差问题，提升最终推荐公平性。
         </font>
     </p>
 </figcaption>
